--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -11,3 +11,14 @@ jobs:
           elixir-version: 1.14
       - run: mix deps.get
       - run: mix test
+
+  release:
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@v2
+      - uses: erlef/setup-beam@v1
+        with:
+          otp-version: 25
+          elixir-version: 1.14
+      - run: mix deps.get
+      - run: MIX_ENV=prod mix release
