--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -34,5 +34,5 @@ jobs:
     container:
       image: debian:latest
     steps:
-      - uses: actions/checkout@v2
-      - run: ls
+      - uses: actions/checkout@v3
+      - run: ls -al
