--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -32,7 +32,13 @@ jobs:
   container-release-test:
     runs-on: ubuntu-latest
     container:
-      image: quay.io/centos/centos:stream8
+      image: debian:buster
     steps:
+      - run: wget https://packages.erlang-solutions.com/erlang-solutions_2.0_all.deb
+      - run: sudo dpkg -i erlang-solutions_2.0_all.deb
+      - run: sudo apt-get update
+      - run: sudo apt-get install esl-erlang
+      - run: sudo apt-get install elixir
+      - run: elixir --version
       - uses: actions/checkout@v3
       - run: ls -al
