--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -34,12 +34,12 @@ jobs:
     container:
       image: debian:buster
     steps:
-      - run: sudo apt-get install wget
+      - run: apt-get install wget
       - run: wget https://packages.erlang-solutions.com/erlang-solutions_2.0_all.deb
-      - run: sudo dpkg -i erlang-solutions_2.0_all.deb
-      - run: sudo apt-get update
-      - run: sudo apt-get install esl-erlang
-      - run: sudo apt-get install elixir
+      - run: dpkg -i erlang-solutions_2.0_all.deb
+      - run: apt-get update
+      - run: apt-get install esl-erlang
+      - run: apt-get install elixir
       - run: elixir --version
       - uses: actions/checkout@v3
       - run: ls -al
