Add missing dependency

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -35,7 +35,7 @@ jobs:
       image: debian:buster
     steps:
       - run: apt-get update
-      - run: apt-get -y install wget
+      - run: apt-get -y install wget gnupg
       - run: wget https://packages.erlang-solutions.com/erlang-solutions_2.0_all.deb
       - run: dpkg -i erlang-solutions_2.0_all.deb
       - run: apt-get update
