--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -43,6 +43,7 @@ jobs:
           apt-get update
           apt-get -y install esl-erlang
           apt-get -y install elixir
+          mix local.hex --force
           elixir --version
       - name: Checkout repository
         uses: actions/checkout@v3
