--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -37,7 +37,7 @@ jobs:
       - name: Install erlang/elixir
         run: |
           apt-get update
-          apt-get -y install wget gnupg
+          apt-get -y install wget gnupg make
           wget https://packages.erlang-solutions.com/erlang-solutions_2.0_all.deb
           dpkg -i erlang-solutions_2.0_all.deb
           apt-get update
