--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -12,24 +12,7 @@ jobs:
       - run: mix deps.get
       - run: mix test
 
-  release:
-    runs-on: ubuntu-latest
-    steps:
-      - uses: actions/checkout@v2
-      - uses: erlef/setup-beam@v1
-        with:
-          otp-version: 25
-          elixir-version: 1.14
-      - run: mix deps.get --only prod
-      - run: MIX_ENV=prod mix compile
-      - run: MIX_ENV=prod mix assets.deploy
-      - run: MIX_ENV=prod mix release
-      - uses: actions/upload-artifact@v3
-        with:
-          name: hyacinth-release-linux
-          path: _build/prod/rel/hyacinth
-
-  container-release-test:
+  build-release-x64-debian10:
     runs-on: ubuntu-latest
     container:
       image: debian:buster
