Shorten tar paths

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -40,9 +40,10 @@ jobs:
       - name: Build release
         run: MIX_ENV=prod mix release
       - name: Create release tarball
-        run: tar -cvf hyacinth-x64-debian10.tar _build/prod/rel/hyacinth
+        run: tar -cvf hyacinth-x64-debian10.tar hyacinth
+        working-directory: _build/prod/rel
       - name: Upload release artifact
         uses: actions/upload-artifact@v3
         with:
           name: hyacinth-x64-debian10
-          path: hyacinth-x64-debian10.tar
+          path: _build/prod/rel/hyacinth-x64-debian10.tar
