--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -29,6 +29,7 @@ jobs:
           mix local.hex --force
           mix local.rebar --force
           elixir --version
+          apt list --installed
       - name: Checkout repository
         uses: actions/checkout@v3
       - name: Get dependencies
