--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -59,5 +59,5 @@ jobs:
       - run: yum -y install wget
       - run: wget https://packages.erlang-solutions.com/erlang-solutions-2.0-1.noarch.rpm
       - run: rpm -Uvh erlang-solutions-2.0-1.noarch.rpm
-      - run: yum install esl-erlang
+      - run: yum -y install esl-erlang
       - run: erl -version
