--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -61,3 +61,8 @@ jobs:
       - run: dnf -y install erlang-solutions-2.0-1.noarch.rpm
       - run: dnf -y install esl-erlang
       - run: erl -version
+      - run: dnf -y install unzip
+      - run: wget https://github.com/elixir-lang/elixir/releases/download/v1.14.0/elixir-otp-24.zip
+      - run: unzip elixir-otp-24.zip
+      - run: ls -al
+      - run: ls -al elixir-otp-24/bin
