Add elixir to path

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -65,5 +65,6 @@ jobs:
       - run: wget https://github.com/elixir-lang/elixir/releases/download/v1.14.0/elixir-otp-24.zip
       - run: mkdir ~/elixir
       - run: unzip elixir-otp-24.zip -d ~/elixir
-      - run: ls -al ~
-      - run: ls -al ~/elixir
+      - run: export PATH="$PATH:~/elixir/bin"
+      - run: elixir --version
+      - run: mix --version
