--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -65,8 +65,5 @@ jobs:
       - run: wget https://github.com/elixir-lang/elixir/releases/download/v1.14.0/elixir-otp-24.zip
       - run: mkdir ~/elixir
       - run: unzip elixir-otp-24.zip -d ~/elixir
-      - run: export PATH="$PATH:$HOME/elixir/bin"
-      - run: echo $PATH
-      - run: compgen -c
-      - run: elixir --version
-      - run: mix --version
+      - run: ~/elixir/bin/elixir --version
+      - run: ~/elixir/bin/mix --version
