--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -66,4 +66,4 @@ jobs:
       - run: mkdir ~/elixir
       - run: unzip elixir-otp-24.zip -d ~/elixir
       - run: ~/elixir/bin/elixir --version
-      - run: ~/elixir/bin/mix --version
+      - run: locale
