Build centos release

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -60,20 +60,23 @@ jobs:
       - run: wget https://packages.erlang-solutions.com/erlang-solutions-2.0-1.noarch.rpm
       - run: dnf -y install erlang-solutions-2.0-1.noarch.rpm
       - run: dnf -y install esl-erlang
-      - run: erl -version
       - run: dnf -y install unzip
       - run: wget https://github.com/elixir-lang/elixir/releases/download/v1.14.0/elixir-otp-24.zip
       - run: mkdir ~/elixir
       - run: unzip elixir-otp-24.zip -d ~/elixir
-      - run: ~/elixir/bin/elixir --version
-      - run: locale
       - name: Define locale
         run: |
           dnf -y install glibc-locale-source glibc-langpack-en
           localedef -c -f UTF-8 -i en_US en_US.UTF-8
-      - name: Run elixir
+      - name: Build release
         run: |
           export LC_ALL=en_US.UTF-8
           export PATH="$PATH:$HOME/elixir/bin"
-          elixir --version
-          mix --version
+          export MIX_ENV=prod
+          mix deps.get --only prod
+          mix compile
+          mix assets.deploy
+          mix release
+      - name: Create release tarball
+        run: tar -cvf hyacinth-x64-debian10.tar hyacinth
+        working-directory: _build/prod/rel
