--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -75,6 +75,8 @@ jobs:
           export LC_ALL=en_US.UTF-8
           export PATH="$PATH:$HOME/elixir/bin"
           export MIX_ENV=prod
+          mix local.hex --force
+          mix local.rebar --force
           mix deps.get --only prod
           mix compile
           mix assets.deploy
