--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -54,17 +54,21 @@ jobs:
     container:
       image: quay.io/centos/centos:stream8
     steps:
-      - run: dnf config-manager --set-enabled powertools
-      - run: dnf -y install epel-release epel-next-release
-      - run: dnf -y install wget
-      - run: wget https://packages.erlang-solutions.com/erlang-solutions-2.0-1.noarch.rpm
-      - run: dnf -y install erlang-solutions-2.0-1.noarch.rpm
-      - run: dnf -y install esl-erlang
-      - run: dnf -y install unzip
-      - run: wget https://github.com/elixir-lang/elixir/releases/download/v1.14.0/elixir-otp-24.zip
-      - run: mkdir ~/elixir
-      - run: unzip elixir-otp-24.zip -d ~/elixir
-      - name: Define locale
+      - name: Install Erlang/OTP
+        run: |
+          dnf config-manager --set-enabled powertools
+          dnf -y install epel-release epel-next-release
+          dnf -y install wget
+          wget https://packages.erlang-solutions.com/erlang-solutions-2.0-1.noarch.rpm
+          dnf -y install erlang-solutions-2.0-1.noarch.rpm
+          dnf -y install esl-erlang
+      - name: Install precompiled Elixir
+        run: |
+          dnf -y install unzip
+          wget https://github.com/elixir-lang/elixir/releases/download/v1.14.0/elixir-otp-24.zip
+          mkdir ~/elixir
+          unzip elixir-otp-24.zip -d ~/elixir
+      - name: Define en_US.UTF-8 locale
         run: |
           dnf -y install glibc-locale-source glibc-langpack-en
           localedef -c -f UTF-8 -i en_US en_US.UTF-8
