Unzip in home dir instead of working dir

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -24,8 +24,9 @@ jobs:
         run: |
           curl -fLO https://github.com/rordenlab/dcm2niix/releases/latest/download/dcm2niix_lnx.zip
           unzip dcm2niix_lnx.zip
-          mkdir ~/dcm2niix_bin
-          mv dcm2niix ~/dcm2niix_bin/dcm2niix
+          mkdir dcm2niix_bin
+          mv dcm2niix dcm2niix_bin
+        working-directory: ~
       - name: Set up slicer python
         run: |
           python -m venv venv
