--- a/.github/workflows/build-x64-centos-7.yml
+++ b/.github/workflows/build-x64-centos-7.yml
@@ -27,10 +27,15 @@ jobs:
           localedef -c -f UTF-8 -i en_US en_US.UTF-8
       - name: Install dev tools
         run: dnf -y install gcc make glibc-devel
+      - name: Install devtoolset
+        run: |
+          dnf -y install centos-release-scl
+          dnf -y install devtoolset-8-gcc
       - name: Checkout repository
         uses: actions/checkout@v3
       - name: Build release
         run: |
+          scl enable devtoolset-8 -- bash
           export LC_ALL=en_US.UTF-8
           export PATH="$PATH:$HOME/elixir/bin"
           export MIX_ENV=prod
