--- a/.github/workflows/build-x64-centos-7.yml
+++ b/.github/workflows/build-x64-centos-7.yml
@@ -35,7 +35,7 @@ jobs:
         uses: actions/checkout@v3
       - name: Build release
         run: |
-          scl enable devtoolset-8 -- bash
+          source scl_source enable devtoolset-8
           gcc --version
           make --version
           export LC_ALL=en_US.UTF-8
