--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -38,8 +38,21 @@ jobs:
       - name: Upload build to release
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-        run: |
-          gh release upload \
-            --repo $GITHUB_REPOSITORY \
-            ${{ inputs.tagName }} \
-            hyacinth-x64-centos-stream-8.tar
+        run: gh release upload --repo $GITHUB_REPOSITORY ${{ inputs.tagName }} hyacinth-x64-centos-stream-8.tar.gz
+
+  build-x64-centos-7:
+    uses: ./.github/workflows/build-x64-centos-7.yml
+
+  upload-x64-centos-7:
+    needs: [create-release-draft, build-x64-centos-7]
+    runs-on: ubuntu-latest
+    permissions:
+      contents: write
+    steps:
+      - uses: actions/download-artifact@v3
+        with:
+          name: hyacinth-x64-centos-7
+      - name: Upload build to release
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+        run: gh release upload --repo $GITHUB_REPOSITORY ${{ inputs.tagName }} hyacinth-x64-centos-7.tar.gz
