--- a/.github/workflows/build-x64-ubuntu-2204.yml
+++ b/.github/workflows/build-x64-ubuntu-2204.yml
@@ -9,7 +9,9 @@ jobs:
       image: ubuntu:22.04
     steps:
       - name: Install Elixir
-        run: apt-get -y install elixir
+        run: | 
+          apt-get update
+          apt-get -y install elixir
       - name: Checkout repository
         uses: actions/checkout@v3
       - name: Build release
