--- a/.github/workflows/build-x64-centos-stream-8.yml
+++ b/.github/workflows/build-x64-centos-stream-8.yml
@@ -10,6 +10,7 @@ jobs:
     steps:
       - name: Install Erlang/OTP
         run: |
+          dnf -y install 'dnf-command(config-manager)'
           dnf config-manager --set-enabled powertools
           dnf -y install epel-release epel-next-release
           dnf -y install wget
