Add macos build to ci

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -10,6 +10,9 @@ jobs:
   build-x64-ubuntu-2204:
     uses: ./.github/workflows/build-x64-ubuntu-2204.yml
 
+  build-x64-macos-12:
+    uses: ./.github/workflows/build-x64-macos-12.yml
+
   build-x64-centos-stream-8:
     uses: ./.github/workflows/build-x64-centos-stream-8.yml
 
